@@ -4,10 +4,10 @@
   display: table;
   clear: both;
 }
-.pwb-brand-banner-cont.before-loop{
+.pwb-before-loop{
   margin-bottom: 1em;
 }
-.pwb-brand-banner-cont.after-loop{
+.pwb-after-loop{
   margin-top: 1em;
 }
 /* ----------------------- /Global ----------------------- */
