@@ -4,7 +4,9 @@
 * Feature: The brands column is sortable now
 * Catalan translation (thanks to Lluisma)
 * Enhancement: Easier select brands page link in breadcrumbs
-* Dev: New filter pwb_taxonomy_with_front to change default "with_front" value
+* Enhancement: Configure the brand banner and the brand description position independently
+* Dev: New filter 'pwb_taxonomy_rewrite' to change the rewrite slug
+* Dev: New filter 'pwb_taxonomy_with_front' to change default "with_front" value
 * Fix: Fatal error in PHP5.4
 = 1.7.0 =
 * Feature: A-Z Listing shortcode
